--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.2",
+    "axios": "^0.21.1",
     "buffer": "^6.0.3",
+    "chalk": "^4.1.0",
     "chota": "^0.9.2",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
