--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.1.2",
     "buffer": "^6.0.3",
     "chota": "^0.9.2",
+    "lodash": "^4.17.21",
     "vue": "^3.4.15",
     "vuedraggable": "^4.1.0"
   },
