--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "buffer": "^6.0.3",
     "chota": "^0.9.2",
     "lodash": "^4.17.21",
-    "vue": "^3.4.15",
+    "vue": "^3.5.18",
+    "vue-i18n": "^11.1.11",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
