--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.1.2",
     "buffer": "^6.0.3",
     "chota": "^0.9.2",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "vue": "^3.5.18",
     "vue-i18n": "^11.1.11",
